/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-10-31 17:43 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * common.mk
  * build/zig-binary/Makefile
    * on macOS machine name is arm64 not aarch64 here again

  * .github/workflows/macos.yml
    * /usr/bin/cat -> /bin/cat

2025-10-31 17:17 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + .github/workflows/macos.yml
    + added macos-latest runner
    
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows.yml
    * fix path oops

2025-10-31 16:47 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/Makefile
  * base/pmgr/Makefile
  * base/xz-current/Makefile
  * base/xz-inherit/Makefile
  * base/xz/Makefile
  - base/GNU.txt
  + base/gnu.mk
  + base/via.mk
    * changed BSD Make bootstrap
      to use swappable via.mk

  * build/Makefile
    + PKGSELECTION="pkgname1 pkgname2 ..."
      to build specific packages

  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows.yml
    * changed to use PKGSELECTION=
    + add diffutils on win/MSYS2

  * common.mk
    ; final variables proposal

  * README
    + [extra]

2025-10-30 11:10 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * common.mk
  * build/zig-binary/Makefile
    * patch for macOS host
    ! don't overwrite HBPK_CC_FAMILY if it's already set
      (c&p typo)

2025-10-30 01:50 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * common.mk
    * indent

  * hbinfo.mk
    * supply .exe bin extension while locating hbmk2 on win

2025-10-30 00:19 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * base/GNU.txt
  * base/Makefile
    * self-modifying bootstrap BSD to GNU, only to activate
      missing feature of work dir override

  * base/pmgr/Makefile
  * base/xz-current/Makefile