@@ -49,7 +49,7 @@ jobs:
         touch .config .depend .extract .fetch .patch
         cd ..
         PKGSELECTION=harbour-core-onedir make install
-        sudo chown -R $USER $HBPK_WORKDIR
+        hbpk-ls harbour-core | grep /hbmk2
         PKGSELECTION=" \
           letodbf-server-elch \
           letodbf-server-alcz \
